add-css-styless

--- a/index.html
+++ b/index.html
@@ -12,84 +12,104 @@
 </head>
 <body class="body-website">
     <header class="header">
-        <nav class="header-titel">
-            <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
-            <ul class="menu">
-                <li><a href="./index.html"  class="header-list">Studio</a></li>
-                <li><a href="" class="header-list">Portfolio</a></li>
-                <li><a href="" class="header-list">Contacts</a></li>
-            </ul>
-        </nav>
-        <address class="address-header">
-            <ul>
-                <li><a href="mailto:info@devstudio.com" class="header-address">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="header-address">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+        <div class="conteiner header-conteiner">
+            <nav class="header-titel">
+                <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
+                <ul class="menu">
+                    <li><a href="./index.html"  class="header-list">Studio</a></li>
+                    <li><a href="" class="header-list">Portfolio</a></li>
+                    <li><a href="" class="header-list">Contacts</a></li>
+                </ul>
+            </nav>
+            <address class="address-header">
+                <ul class="menu-soc-list">
+                    <li><a href="mailto:info@devstudio.com" class="header-address">info@devstudio.com</a></li>
+                    <li><a href="tel:+110001111111" class="header-address">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main>
-        <section class="main-titel">
-            <h1 class="main-effective">Effective Solutions for Your Business</h1>
-            <button type="button" class="main-btm">Order Service</button>
-        </section>
-        <section>
-            <h2>Advantages</h2>
-            <ul>
-                <li><h3 class="list-title">Strategy</h3>
-                    <p class="list-paragraph">Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.</p></li>
-                <li><h3 class="list-title">Punctuality</h3>
-                    <p class="list-paragraph">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-                <li><h3 class="list-title">Diligence</h3>
-                    <p class="list-paragraph">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-                <li><h3 class="list-title">Technologies</h3>
-                    <p class="list-paragraph">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
-            </ul>
-        </section>
-        <section class="our-team-title">
-            <h2 class="main-team">Our Team</h2>
-            <ul>
-                <li class="team-group"><img src="./images/img-1.jpg" alt="Mark Guerrero" width="264" class="group-programmers">
-                    <h3 class="list-title">Mark Guerrero</h3>
-                    <p class="list-paragraph ">Product Designer</p></li>
-                <li class="team-group"><img src="./images/img-2.jpg" alt="Tom Ford" width="264" class="group-programmers">
-                    <h3 class="list-title">Tom Ford</h3>
-                    <p class="list-paragraph ">Frontend Developer</p></li>
-                <li class="team-group"><img src="./images/img-3.jpg" alt="Camila Garcia" width="264" class="group-programmers">
-                    <h3 class="list-title">Camila Garcia</h3>
-                    <p class="list-paragraph ">Marketing</p></li>
-                <li class="team-group"> <img src="./images/img-4.jpg" alt="Daniel Wilson" width="264" class="group-programmers">
-                    <h3 class="list-title">Daniel Wilson</h3>
-                    <p class="list-paragraph ">UI Designer</p></li>
-            </ul>
-        </section>
-        <section>
-            <h2 class="main-team">Our Portfolio</h2>
-            <ul>
-                <li><img src="./images/app-img.jpg" alt="Banking App" width="360">
-                <h3 class="list-title">Banking App</h3>
-                <p class="list-paragraph">App</p></li>
-                <li><img src="./images/marketing-img.jpg" alt="Cashless Payment" width="360">
-                <h3 class="list-title">Cashless Payment</h3>
-                <p class="list-paragraph">Marketing</p></li>
-                <li><img src="./images/meditation-img.jpg" alt="Meditation App" width="360">
-                <h3 class="list-title">Meditation App</h3>
-                <p class="list-paragraph">App</p></li>
-                <li><img src="./images/taxi-img.jpg" alt="Taxi Service" width="360">
-                <h3 class="list-title">Taxi Service</h3>
-                <p class="list-paragraph">Marketing</p></li>
-                <li><img src="./images/screen-img.jpg" alt="Screen Illustrations" width="360">
-                <h3 class="list-title">Screen Illustrations</h3>
-                <p class="list-paragraph">Design</p></li>
-                <li><img src="./images/courses-img.jpg" alt="Online Courses" width="360">
-                <h3 class="list-title">Online Courses</h3>
-                <p class="list-paragraph">Marketing</p></li>
-            </ul>
-        </section>
+            <section class="main-titel">
+                <div class="conteiner effective-conteiner">
+                    <h1 class="main-effective">Effective Solutions for Your Business</h1>
+                    <button type="button" class="main-btm">Order Service</button>
+                </div>
+            </section>
+            <section class="advantages">
+                <div class="conteiner">
+                    <h2 class="name-section-two">Advantages</h2>
+                    <ul class="hard-worker">
+                        <li class="advantages-list-title"><h3 class="list-title">Strategy</h3>
+                            <p class="list-paragraph">Our goal is to identify the business
+                                problem to walk away with the perfect and creative solution.</p>
+                        </li>
+                        <li class="advantages-list-title"><h3 class="list-title">Punctuality</h3>
+                            <p class="list-paragraph">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                        </li>
+                        <li class="advantages-list-title"><h3 class="list-title">Diligence</h3>
+                            <p class="list-paragraph">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                        </li>
+                        <li class="advantages-list-title"><h3 class="list-title">Technologies</h3>
+                            <p class="list-paragraph">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="our-team-title">
+                <div class="conteiner">
+                    <h2 class="main-team">Our Team</h2>
+                    <ul class="programing-team">
+                        <li class="team-group"><img src="./images/img-1.jpg" alt="Mark Guerrero" width="264" height="260" class="group-programmers">
+                            <h3 class="list-title-team">Mark Guerrero</h3>
+                            <p class="list-programing-work ">Product Designer</p>
+                        </li>
+                        <li class="team-group"><img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260" class="group-programmers">
+                            <h3 class="list-title-team">Tom Ford</h3>
+                            <p class="list-programing-work ">Frontend Developer</p>
+                        </li>
+                        <li class="team-group"><img src="./images/img-3.jpg" alt="Camila Garcia" width="264" height="260" class="group-programmers">
+                            <h3 class="list-title-team">Camila Garcia</h3>
+                            <p class="list-programing-work ">Marketing</p>
+                        </li>
+                        <li class="team-group"> <img src="./images/img-4.jpg" alt="Daniel Wilson" width="264" height="260" class="group-programmers">
+                            <h3 class="list-title-team">Daniel Wilson</h3>
+                            <p class="list-programing-work ">UI Designer</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="our-portfolio">
+                <div class="conteiner">
+                    <h2 class="main-team">Our Portfolio</h2>
+                    <ul class="portfolio-list-app">
+                        <li><img src="./images/app-img.jpg" alt="Banking App" width="360" height="300" class="program-app-marketing">
+                        <h3 class="list-title-portfolio">Banking App</h3>
+                        <p class="list-paragraph-portfolio">App</p></li>
+                        <li><img src="./images/marketing-img.jpg" alt="Cashless Payment" width="360" height="300" class="program-app-marketing">
+                        <h3 class="list-title-portfolio">Cashless Payment</h3>
+                        <p class="list-paragraph-portfolio">Marketing</p></li>
+                        <li><img src="./images/meditation-img.jpg" alt="Meditation App" width="360" height="300" class="program-app-marketing">
+                        <h3 class="list-title-portfolio">Meditation App</h3>
+                        <p class="list-paragraph-portfolio">App</p></li>
+                        <li><img src="./images/taxi-img.jpg" alt="Taxi Service" width="360" height="300" class="program-app-marketing">
+                        <h3 class="list-title-portfolio">Taxi Service</h3>
+                        <p class="list-paragraph-portfolio">Marketing</p></li>
+                        <li><img src="./images/screen-img.jpg" alt="Screen Illustrations" width="360" height="300" class="program-app-marketing">
+                        <h3 class="list-title-portfolio">Screen Illustrations</h3>
+                        <p class="list-paragraph-portfolio">Design</p></li>
+                        <li><img src="./images/courses-img.jpg" alt="Online Courses" width="360" height="300" class="program-app-marketing">
+                        <h3 class="list-title-portfolio">Online Courses</h3>
+                        <p class="list-paragraph-portfolio">Marketing</p></li>
+                    </ul>
+                </div>
+            </section>
     </main>
-    <footer class="footer-flow">
-        <a href="./index.html" class="logo">Web<span class="footer-titel-type">Studio</span></a>
-        <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing &#38; growth solutions.</p>
-    </footer>
+        <footer class="footer-flow">
+            <div class="conteiner">
+                <a href="./index.html" class="logo">Web<span class="footer-titel-type">Studio</span></a>
+                <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing &#38; growth solutions.</p>
+            </div>
+        </footer>
 </body>
 </html>
