--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="body-website">
     <header class="header">
-        <div class="conteiner header-conteiner">
+        <div class="container header-conteiner">
             <nav class="header-titel">
                 <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
                 <ul class="menu">
@@ -31,14 +31,14 @@
     </header>
     <main>
             <section class="main-titel">
-                <div class="conteiner effective-conteiner">
+                <div class="container">
                     <h1 class="main-effective">Effective Solutions for Your Business</h1>
                     <button type="button" class="main-btm">Order Service</button>
                 </div>
             </section>
             <section class="advantages">
-                <div class="conteiner">
-                    <h2 class="name-section-two">Advantages</h2>
+                <div class="container">
+                    <h2 class="visually-hidden">Advantages</h2>
                     <ul class="hard-worker">
                         <li class="advantages-list-title"><h3 class="list-title">Strategy</h3>
                             <p class="list-paragraph">Our goal is to identify the business
@@ -57,57 +57,73 @@
                 </div>
             </section>
             <section class="our-team-title">
-                <div class="conteiner">
+                <div class="container">
                     <h2 class="main-team">Our Team</h2>
                     <ul class="programing-team">
                         <li class="team-group"><img src="./images/img-1.jpg" alt="Mark Guerrero" width="264" height="260" class="group-programmers">
-                            <h3 class="list-title-team">Mark Guerrero</h3>
-                            <p class="list-programing-work ">Product Designer</p>
+                            <div class="name-programist"><h3 class="list-title-team">Mark Guerrero</h3>
+                                <p class="list-programing-work ">Product Designer</p>
+                            </div>
                         </li>
                         <li class="team-group"><img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260" class="group-programmers">
-                            <h3 class="list-title-team">Tom Ford</h3>
-                            <p class="list-programing-work ">Frontend Developer</p>
+                            <div class="name-programist"><h3 class="list-title-team">Tom Ford</h3>
+                                <p class="list-programing-work ">Frontend Developer</p>
+                            </div>
                         </li>
                         <li class="team-group"><img src="./images/img-3.jpg" alt="Camila Garcia" width="264" height="260" class="group-programmers">
-                            <h3 class="list-title-team">Camila Garcia</h3>
-                            <p class="list-programing-work ">Marketing</p>
+                            <div class="name-programist"><h3 class="list-title-team">Camila Garcia</h3>
+                                <p class="list-programing-work ">Marketing</p>
+                            </div>
                         </li>
                         <li class="team-group"> <img src="./images/img-4.jpg" alt="Daniel Wilson" width="264" height="260" class="group-programmers">
-                            <h3 class="list-title-team">Daniel Wilson</h3>
-                            <p class="list-programing-work ">UI Designer</p>
+                            <div class="name-programist"><h3 class="list-title-team">Daniel Wilson</h3>
+                                <p class="list-programing-work ">UI Designer</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
             </section>
             <section class="our-portfolio">
-                <div class="conteiner">
+                <div class="container">
                     <h2 class="main-team">Our Portfolio</h2>
                     <ul class="portfolio-list-app">
-                        <li><img src="./images/app-img.jpg" alt="Banking App" width="360" height="300" class="program-app-marketing">
-                        <h3 class="list-title-portfolio">Banking App</h3>
-                        <p class="list-paragraph-portfolio">App</p></li>
-                        <li><img src="./images/marketing-img.jpg" alt="Cashless Payment" width="360" height="300" class="program-app-marketing">
-                        <h3 class="list-title-portfolio">Cashless Payment</h3>
-                        <p class="list-paragraph-portfolio">Marketing</p></li>
-                        <li><img src="./images/meditation-img.jpg" alt="Meditation App" width="360" height="300" class="program-app-marketing">
-                        <h3 class="list-title-portfolio">Meditation App</h3>
-                        <p class="list-paragraph-portfolio">App</p></li>
-                        <li><img src="./images/taxi-img.jpg" alt="Taxi Service" width="360" height="300" class="program-app-marketing">
-                        <h3 class="list-title-portfolio">Taxi Service</h3>
-                        <p class="list-paragraph-portfolio">Marketing</p></li>
-                        <li><img src="./images/screen-img.jpg" alt="Screen Illustrations" width="360" height="300" class="program-app-marketing">
-                        <h3 class="list-title-portfolio">Screen Illustrations</h3>
-                        <p class="list-paragraph-portfolio">Design</p></li>
-                        <li><img src="./images/courses-img.jpg" alt="Online Courses" width="360" height="300" class="program-app-marketing">
-                        <h3 class="list-title-portfolio">Online Courses</h3>
-                        <p class="list-paragraph-portfolio">Marketing</p></li>
+                        <li class="list-portfolio-team"><img src="./images/app-img.jpg" alt="Banking App" width="360" height="300" class="program-app-marketing">
+                            <div class="portfolio-list-program"><h3 class="list-title-portfolio">Banking App</h3>
+                                <p class="list-paragraph-portfolio">App</p>
+                            </div>
+                        </li>
+                        <li class="list-portfolio-team"><img src="./images/marketing-img.jpg" alt="Cashless Payment" width="360" height="300" class="program-app-marketing">
+                            <div class="portfolio-list-program"><h3 class="list-title-portfolio">Cashless Payment</h3>
+                                <p class="list-paragraph-portfolio">Marketing</p>
+                            </div>
+                        </li>
+                        <li class="list-portfolio-team"><img src="./images/meditation-img.jpg" alt="Meditation App" width="360" height="300" class="program-app-marketing">
+                            <div class="portfolio-list-program"><h3 class="list-title-portfolio">Meditation App</h3>
+                                <p class="list-paragraph-portfolio">App</p>
+                            </div>
+                        </li>
+                        <li class="list-portfolio-team"><img src="./images/taxi-img.jpg" alt="Taxi Service" width="360" height="300" class="program-app-marketing">
+                            <div class="portfolio-list-program"><h3 class="list-title-portfolio">Taxi Service</h3>
+                                <p class="list-paragraph-portfolio">Marketing</p>
+                            </div>
+                        </li>
+                        <li class="list-portfolio-team"><img src="./images/screen-img.jpg" alt="Screen Illustrations" width="360" height="300" class="program-app-marketing">
+                            <div class="portfolio-list-program"><h3 class="list-title-portfolio">Screen Illustrations</h3>
+                                <p class="list-paragraph-portfolio">Design</p>
+                            </div>
+                        </li>
+                        <li class="list-portfolio-team"><img src="./images/courses-img.jpg" alt="Online Courses" width="360" height="300" class="program-app-marketing">
+                            <div class="portfolio-list-program"><h3 class="list-title-portfolio">Online Courses</h3>
+                                <p class="list-paragraph-portfolio">Marketing</p>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </section>
     </main>
         <footer class="footer-flow">
-            <div class="conteiner">
-                <a href="./index.html" class="logo">Web<span class="footer-titel-type">Studio</span></a>
+            <div class="container">
+                <a href="./index.html" class="logo-footer">Web<span class="footer-titel-type">Studio</span></a>
                 <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing &#38; growth solutions.</p>
             </div>
         </footer>
