--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </nav>
             <address class="address-header">
                 <ul class="menu-soc-list">
-                    <li><a href="mailto:info@devstudio.com" class="header-address">info@devstudio.com</a></li>
-                    <li><a href="tel:+110001111111" class="header-address">+11 (000) 111-11-11</a></li>
+                    <li class="list-menu"><a href="mailto:info@devstudio.com" class="header-address">info@devstudio.com</a></li>
+                    <li class="list-menu"><a href="tel:+110001111111" class="header-address">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
         </div>
